checking.yaml calls reusable_workflow.yaml

--- a/.github/workflows/checking.yaml
+++ b/.github/workflows/checking.yaml
@@ -33,3 +33,6 @@ jobs:
       run: yamllint ${{ steps.changed_files.outputs.yaml_files }}
     - name: Shellcheck
       run: shellcheck ${{ steps.changed_files.outputs.shell_files }}
+
+  check-reusable:
+    uses: ./.github/workflows/reusable_workflow.yaml
