fix runner name in reusable_workflow.yaml

--- a/.github/workflows/reusable_workflow.yaml
+++ b/.github/workflows/reusable_workflow.yaml
@@ -4,10 +4,10 @@ on:
 
 jobs:
   job1:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - run: echo job 1
   job2:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - run: echo job 2
