--- a/.github/workflows/reusable_workflow.yaml
+++ b/.github/workflows/reusable_workflow.yaml
@@ -11,7 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo job 1 -- ${{ github.ref }}
+      - run: echo 1. form j1 >> "$GITHUB_STEP_SUMMARY"
   job2:
     runs-on: ubuntu-latest
     steps:
       - run: echo job 2
+      - run: echo 1. form j2 >> "$GITHUB_STEP_SUMMARY"
+      - run: echo runner name = $RUNNER_NAME >> "$GITHUB_STEP_SUMMARY"
+      - run: echo '## title from job 2' >> "$GITHUB_STEP_SUMMARY"
