--- a/.github/workflows/reusable_workflow.yaml
+++ b/.github/workflows/reusable_workflow.yaml
@@ -13,6 +13,9 @@ jobs:
       - run: echo job 1 -- ${{ github.ref }}
       - run: echo 1. form j1 >> "$GITHUB_STEP_SUMMARY"
       - run: 'printf "ansi escape: \33[31min read\nnext line\n" | tee "$GITHUB_STEP_SUMMARY"'
+      - run: ::note title=a test note::some note
+      - run: ::note file=.github/workflows/reusable_workflow.yaml title=on file::note on file
+      - run: ::note file=.github/workflows/reusable_workflow.yaml line=17 title=on file's line::note on line
   job2:
     runs-on: ubuntu-latest
     steps:
