reusable_workflow.yaml without space before separating comma

--- a/.github/workflows/reusable_workflow.yaml
+++ b/.github/workflows/reusable_workflow.yaml
@@ -14,8 +14,8 @@ jobs:
       - run: echo 1. form j1 >> "$GITHUB_STEP_SUMMARY"
       - run: 'printf "ansi escape: \33[31min read\nnext line\n" | tee "$GITHUB_STEP_SUMMARY"'
       - run: ::notice title=a test note::some notice
-      - run: ::notice file=.github/workflows/reusable_workflow.yaml title=on file::notice on file
-      - run: ::notice file=.github/workflows/reusable_workflow.yaml line=17 title=on file's line::notice on line
+      - run: ::notice file=.github/workflows/reusable_workflow.yaml,title=on file::notice on file
+      - run: ::notice file=.github/workflows/reusable_workflow.yaml,line=17,title=on file's line::notice on line
   job2:
     runs-on: ubuntu-latest
     steps:
