--- a/.github/workflows/reusable_workflow.yaml
+++ b/.github/workflows/reusable_workflow.yaml
@@ -13,7 +13,7 @@ jobs:
       - run: echo job 1 -- ${{ github.ref }}
       - run: echo 1. form j1 >> "$GITHUB_STEP_SUMMARY"
       - run: 'printf "ansi escape: \33[31min read\nnext line\n" | tee "$GITHUB_STEP_SUMMARY"'
-      - run: echo '<a name=refInBoth</a>' >> "$GITHUB_STEP_SUMMARY"
+      - run: echo '<a name=refInBoth></a>' >> "$GITHUB_STEP_SUMMARY"
       - run: echo ::notice title=a test note::some notice
       - run: echo ::notice file=.github/workflows/reusable_workflow.yaml,title=on file::notice on file
       - run: echo ::notice file=.github/workflows/reusable_workflow.yaml,line=17,title=on line of file::notice on line
@@ -24,6 +24,6 @@ jobs:
       - run: echo job 2
       - run: echo 1. form j2 >> "$GITHUB_STEP_SUMMARY"
       - run: echo runner name = $RUNNER_NAME >> "$GITHUB_STEP_SUMMARY"
-      - run: echo '<a name=refInBoth</a>' >> "$GITHUB_STEP_SUMMARY"
+      - run: echo '<a name=refInBoth></a>' >> "$GITHUB_STEP_SUMMARY"
       - run: echo '## title from job 2' >> "$GITHUB_STEP_SUMMARY"
-      - run: echo '<a name=refJ2</a>' >> "$GITHUB_STEP_SUMMARY"
+      - run: echo '<a name=refJ2></a>' >> "$GITHUB_STEP_SUMMARY"
